# tilda-cli

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirement.txt  requirements.in  requirements.txt  setup.py  temp.txt  tildaconfig.sample.toml  watch.py
src/: __init__.py  cli.py  config.py  logger.py  state.py  tilda.py
src/agents/: __init__.py
src/agents/terminal/: __init__.py  agent.py  prompt.jinja2  terminal.py
src/commands/: __init__.py  commands.py  commands_config.py  run_init.py  run_terminal.py
src/commands/init/: __init__.py  run_init.py  tildaconfig.jinja2
src/commands/init_command/: __init__.py  runner.py  types.py
src/commands/terminal/: __init__.py  run_terminal.py  runner.py  types.py
src/commands/terminal_command/: __init__.py  runner.py  types.py
src/common/: __init__.py  llm_client.py  llm_inference_client.py  logger.py  print_error.py  thread_safe_singleton.py  tool_handler.py
src/config/: commands.py  config.py
src/lib/: logger.py  print_error.py
src/lib/llm_client/: client.py  error_handler.py  response_validator.py
src/lib/types/: llm_messages.py  singleton_meta.py
src/lib/utils/: __init__.py  file_system.py  get_jinja_env.py  key_handler.py  (+9 more)
src/llms/: claude_client.py  gemini_client.py  groq_client.py  llm.py  mistral_client.py  ollama_client.py  openai_client.py
src/pkg/: logger.py  print_error.py
src/state/: state.py
src/templates/: terminal_agent_prompt.jinja2
src/types/: llm_tools.py
src/utils/: __init__.py  append_to_file.py  configure_shell_output_logging.py  configure_shell_real_time_history.py  file_system.py  get_command_history.py  get_file_project_path.py  get_jinja_env.py  get_project_config_files.py  get_project_root_path.py  get_tree.py  get_user_shell.py  is_in_file.py  jinja_setup.py  read_cmd_history.py  read_shell_history.py  shell_scripts.py  user_interactions.py  write_log_file.py
(+51 files in other folders)
