[build-system]
requires = ['setuptools==69.5.1', 'wheel==0.43.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'tilda'
version = '0.0.1'
description = 'The AI CLI'
requires-python = '>=3.12.2'
authors = [{ name = 'tilda.ai' }]
readme = 'README.md'
license = { file = 'LICENSE' }
dependencies = [
    'argparse==1.4.0',
    'logging==0.4.9.6'
]
scripts = { 'tilda' = 'src.tilda:main' }

