[build-system]
requires = ['setuptools==69.5.1', 'wheel==0.43.0' , 'build==1.2.1']
build-backend = 'setuptools.build_meta'

[project]
name = 'tilda'
version = '0.0.1'
description = 'The AI CLI'
requires-python = '>=3.12'
authors = [{ name = 'tilda.ai' }]
readme = 'README.md'
license = { file = 'LICENSE' }
dependencies = [
    'inquirerpy==0.3.4',
    'argparse==1.4.0',
    'logging==0.4.9.6',
    'anthropic==0.25.5',
    'google-generativeai==0.5.1',
    'groq==0.5.0',
    'jinja2==3.1.3',
    'mistralai==0.1.8',
    'ollama==0.1.7',
    'openai==1.21.2',
    'sqlmodel==0.0.16',
    'tiktoken==0.6.0',
    'toml==0.10.2',
]
scripts = { 'tilda' = 'src.tilda:main' }

