[build-system]
requires = ['setuptools==69.5.1', 'wheel==0.43.0' , 'build==1.2.1']
build-backend = 'setuptools.build_meta'

[project]
name = 'tilda'
version = '0.0.1'
description = 'The AI CLI'
requires-python = '>=3.12'
authors = [{ name = 'tilda.ai' }]
readme = 'README.md'
license = { file = 'LICENSE' }
dependencies = [
    'keyring==25.2.1',
    'inquirerpy==0.3.4',
    'argparse==1.4.0',
    'logging==0.4.9.6',
    'jinja2==3.1.3',
    'openai==1.21.2',
    'toml==0.10.2',
    'watchdog==4.0.0',
    'pathspec==0.12.1',
    'rich==13.7.1',
    'build==1.2.1',
    'prompt-toolkit==3.0.43',
    'jsonschema==4.22.0',
]
scripts = { 'tilda' = 'src.cli:main' }

